--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -34,6 +34,7 @@ html {
 }
 
 body {
+    width:100%;
     display: flex;
     justify-content: center;
 }
@@ -46,30 +47,16 @@ body {
 
 #root {
 
-    display: flex;
-    justify-content: center;
     width: 100%;
     color: #282F33;
-
     font-family: "Barlow";
     font-weight: 400;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
 }
 
 #app-wrapper {
 
-    flex-grow: 1;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
     width: 100%;
-
     background-color: white;
 }
 
