--- a/src/scss/SurveyingPage.scss
+++ b/src/scss/SurveyingPage.scss
@@ -1,7 +1,101 @@
 @import "./App.scss";
 
+
 .surveying-page {
+
     min-height: 100vh;
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @include rfs(2rem 0rem, padding);
+
+    // When we show the fixed-info-overlay we use a useEffect (in SurveyingPage.jsx) to stop overflow on the <body>
+    // This offset adds padding where the scrollbar was so that the page doesn't jut to the right
+    &.noscroll-padding-offset {
+        padding-right: 16px;
+    }
+}
+
+.fixed-info-overlay {
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    background-color: rgba(35, 35, 35, 0.7);
+
+    .specific-question-details-container {
+
+        user-select: none;
+        background-color: white;
+        max-width: 700px;
+        min-width: 700px;
+        box-shadow: 0 0 0.5rem 0 rgb(0 0 0 / 30%);
+        border-radius: 1rem;
+        padding: 1.5rem 2rem;
+
+        .question-details-heading {
+            text-align: center;
+            margin-bottom: 1.125rem;
+        }
+
+        .question-details-question {
+            text-align: center;
+            margin-bottom: 1.125rem;
+        }
+
+        .question-details-comparison {
+
+            font-size: 1.125rem;
+            margin-bottom: 1.125rem;
+            text-align: center;
+
+            .red-text {
+                color: rgb(146, 56, 56);
+            }
+
+
+            .green-text {
+                color: rgb(35, 129, 55);
+            }
+
+        }
+
+        .question-details-quote {
+            
+            font-size: 1.125rem;
+            margin-bottom: 1.125rem;
+            text-align: center;
+        }
+
+        .question-details-quote-summary {}
+
+
+        .exit-details-container {
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .exit-details-button {
+                width: 75%;
+                border-radius: 0.375rem;
+                @include rfs(1.25rem, font-size);
+            }
+        }
+
+
+    }
+
 }
 
 .select-surveys-subpage-container {
@@ -13,7 +107,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-    
+
         .surveys-selection-container {
 
             user-select: none;
@@ -21,21 +115,21 @@
             box-shadow: 0 0 0.5rem 0 rgb(0 0 0 / 30%);
             border-radius: 1rem;
             @include rfs(1.5rem 2rem, padding);
-        
+
             .select-surveys-heading {
                 text-align: center;
                 font-weight: 800;
                 @include rfs(0.75rem, margin-bottom);
             }
-        
+
             .select-surveys-button {
                 z-index: 200;
                 @include rfs(0.5rem, margin-top);
                 border-radius: 0.5rem;
                 @include rfs(1.25rem, font-size);
-        
+
             }
-        
+
             .select-surveys-error {
                 @include rfs(0.25rem, margin-top);
                 overflow: hidden;
@@ -43,16 +137,16 @@
                 @include rfs(1.25rem, font-size);
                 z-index: -200;
             }
-        
+
             .selectsurvey-checkbox-with-righttext {
-        
+
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 font-weight: 400;
                 @include rfs(0.25rem, margin-top);
                 @include rfs(1.375rem, font-size);
-        
+
                 .select-survey-checkbox {
                     @include rfs(0.5rem, margin-right);
                     @include rfs(1.375rem, height);
@@ -60,7 +154,7 @@
                 }
             }
         }
-       
+
     }
 
 }
@@ -75,7 +169,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-    
+
         .lets-see {
             max-width: 60%;
             overflow: hidden;
@@ -87,21 +181,21 @@
                 font-weight: 800;
             }
         }
-    
+
         .individual-surveys-container {
-    
+
             .individual-survey-perspective-container {
-    
+
                 @include rfs(2rem, margin-bottom);
                 // This is the flipper
                 background-color: transparent;
                 perspective: 5000px;
                 padding: 0px;
-        
+
                 .flip-card {
-        
+
                     --flip-delay: 1.5s;
-        
+
                     background-color: white;
                     position: relative;
                     width: 100%;
@@ -109,25 +203,25 @@
                     transition: transform 1.25s;
                     transition-delay: var(--flip-delay);
                     transform-style: preserve-3d;
-        
+
                     border-radius: 0.5rem;
-        
+
                     box-shadow: 0 1px 15px -2px rgba(0, 0, 0, 0.3);
-            
+
                     .survey-heading {
                         user-select: none;
                         font-weight: 700;
                         @include rfs(0.75rem, margin-bottom);
                     }
-                
+
                     .survey-subheading {
                         user-select: none;
                         font-weight: 700;
                         @include rfs(0.75rem, margin-bottom);
                     }
-        
+
                     .survey-checkbox-with-righttext {
-        
+
                         user-select: none;
                         display: flex;
                         flex-direction: row;
@@ -135,14 +229,14 @@
                         font-weight: 400;
                         @include rfs(0.25rem, margin-top);
                         @include rfs(1.25rem, font-size);
-                
+
                         .survey-checkbox {
                             @include rfs(0.5rem, margin-right);
                             @include rfs(1.25rem, height);
                             @include rfs(1.25rem, width);
                         }
                     }
-        
+
                     .flip-card-front,
                     .flip-card-back {
                         @include rfs(1.5rem 2rem, padding);
@@ -155,28 +249,28 @@
                         /* Safari */
                         backface-visibility: hidden;
                     }
-        
+
                     .flip-card-size-controller {
                         position: relative;
                         width: auto;
-                   //     padding: 0px;
+                        //     padding: 0px;
                         height: auto;
                     }
-        
+
                     .flip-card-front {
                         background-color: rgb(255, 255, 255);
                     }
-        
+
                     .flip-card-back {
                         background-color: rgb(255, 255, 255);
                         transform: rotateX(180deg);
-        
+
                         .link-underline {
                             display: inline-block;
                             position: relative;
                             text-decoration: none;
                             cursor: pointer;
-                        
+
                             &::after {
                                 bottom: 2px;
                                 content: "";
@@ -187,53 +281,53 @@
                                 transition: .3s;
                                 width: 100%;
                                 z-index: -1;
-                        
+
                             }
-    
+
                             &.red-underline {
-    
+
                                 &::after {
                                     background: rgba(226, 58, 58, 0.5);
                                 }
-    
+
                                 &:hover::after {
                                     background: rgba(230, 85, 85, 0.85);
-    
+
                                 }
                             }
-    
-    
+
+
                             &.green-underline {
-                                
+
                                 &::after {
                                     background: rgba(58, 226, 94, 0.5);
                                 }
-    
+
                                 &:hover::after {
                                     background: rgba(58, 226, 94, 0.85);
-    
+
                                 }
                             }
                         }
                     }
-        
+
                 }
-        
+
                 &.flipped {
                     &.normal-flip .flip-card {
                         transform: rotateX(180deg);
                     }
-        
+
                     &.opposite-flip .flip-card {
                         transform: rotateX(-180deg);
-        
+
                     }
                 }
             }
-    
+
             .submit-surveys-button {
                 width: 100%;
-            }       
+            }
         }
     }
 }
