--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -34,7 +34,8 @@ html {
 }
 
 body {
-    width:100%;
+    background-color: white;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
