--- a/src/scss/SurveyingPage.scss
+++ b/src/scss/SurveyingPage.scss
@@ -147,6 +147,51 @@
     }
 }
 
+.enter-info-subpage {
+
+    flex-grow: 1;
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .enter-info-container {
+
+        user-select: none;
+        max-width: 700px;
+        box-shadow: 0 0 0.5rem 0 rgb(0 0 0 / 30%);
+        border-radius: 1rem;
+        padding: 1.5rem 2rem;
+
+        .enter-info-heading {
+            text-align: center;
+            font-weight: 800;
+            margin-bottom: 0.75rem;
+        }
+
+        .enter-info-button {
+            z-index: 200;
+            margin-top: 0.5rem;
+            border-radius: 0.5rem;
+            font-size: 1.25rem;
+        }
+
+        .enter-info-textbox {
+            
+        }
+
+        .enter-info-error {
+            margin-top: 0.25rem;
+            overflow: hidden;
+            color: rgb(184, 38, 38);
+            font-size: 1.25rem;
+            z-index: -200;
+        }
+    }
+}
+
 .surveys-subpage {
 
     flex-grow: 1;
